--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         <div class="" style="display: flex; flex-direction: row;">
           <div>
             <ul>
-              <li class="title-small">ОАО "РЖД" (2012 2013)</li>
+              <li class="title-small">ОАО "РЖД" (2012 - 2013)</li>
               <p style="border-bottom: 1px solid #ccc; margin-bottom: 2px;"></p>
               <li><strong>Свердловск-Сортировочная дистанция СЦБ</strong></li>
               <li><strong>Должность:</strong>  электромехник КТСМ (комплекс технических средств многофункциональный)</li>
