--- a/index.html
+++ b/index.html
@@ -146,10 +146,9 @@
           <div>
             <ul>
               <li class="title-small">ОАО "РЖД" (2013 - 2018)</li>
-              <p style="border-bottom: 1px solid #ccc; margin-bottom: 2px;"></p>
               <li><strong>Свердловский центр метрологии</strong></li>
-              <li><strong>Должность:</strong> электромеханик по калибровке и ремонту средств измерений</li>
               <li style="border-bottom: 1px solid #ccc;"></li>
+              <li><strong>Должность:</strong> электромеханик по калибровке и ремонту средств измерений</li>
               <li><strong>Обязанности: </strong></li>
               <li style="border-bottom: 1px solid #ccc;"></li>
               <ul>
@@ -171,10 +170,9 @@
           <div>
             <ul>
               <li class="title-small">ОАО "РЖД" (2012 - 2013)</li>
-              <p style="border-bottom: 1px solid #ccc; margin-bottom: 2px;"></p>
               <li><strong>Свердловск-Сортировочная дистанция СЦБ</strong></li>
+              <p style="border-bottom: 1px s: ;olid #ccc; margin-bottom: 2px;"></p>
               <li><strong>Должность:</strong>  электромехник КТСМ (комплекс технических средств многофункциональный)</li>
-              <li style="border-bottom: 1px solid #ccc;"></li>
               <li><strong>Обязанности: </strong></li>
               <li style="border-bottom: 1px solid #ccc;"></li>
               <ul>
