change text exp block

--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
               <li><strong>Обязанности: </strong></li>
               <li style="border-bottom: 1px solid #ccc;"></li>
               <ul>
-                <li>- калибровка и ремонт средств измерений электрических величин;</li>
-                <li>- калибровка и ремонт средств измерений геометрических величин;</li>
+                <li>- метрологический контроль и обслуживание средств измерений</li>
+                <li>- ремонт средств измерений;</li>
                 <li>- учет и регистрация данных об МО (метрологическом обслуживании) средств измерений.</li>
               </ul>
               <li><strong>Достижения:</strong></li>
