--- a/index.html
+++ b/index.html
@@ -119,11 +119,12 @@
           <div class="skills-item-wrapper">
             <div class="skills-item" >Ruby</div>
             <div class="skills-item" >Ruby on Rails</div>
+            <div class="skills-item" >RSpec</div>
             <div class="skills-item" >PostgreSQL</div>
+            <div class="skills-item" >Redis</div>
             <div class="skills-item" >HTML</div>
             <div class="skills-item" >CSS</div>
-            <div class="skills-item" >Верстка</div>
-            <div class="skills-item" >FlexBox</div>
+            <div class="skills-item" >Верстка (Grid, FlexBox)</div>
             <div class="skills-item" >Git</div>
             <div class="skills-item" >Ubuntu</div>
           </div>
