endpoint before refactor

--- a/en_.html
+++ b/en_.html
@@ -1,37 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
-  <!-- BOOTSTRAP   -->
-<!--   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"> -->
-
-  <!-- USER CSS -->
+  <!-- Bootstrap   -->
+  <!--   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"> -->
+  <!-- Custom CSS -->
   <link rel="stylesheet" href="css/style.css">
-
   <title>Aleksandr Babushkin - CV</title>
 </head>
 <body>
-
-  <div class="btn-container">
-    <a href="index.html">
-    <div class="btn btn-secondary">
-      Русский
-     <!--  <img src="img/russia.png" alt="" style="width: 30px; height: 20px;">  -->
-    </div>
-    </a>
-    
-    <a href="en_.html">
-    <div class="btn btn-primary">
-     <!--  <img src="img/usa.png" alt="" style="width: 30px; height: 20px;"> -->
-      English
-    </div>
-    </a>
-  </div>
-  <!-- ВЕРСТКА НА ФЛЕКСАХ -->
   <section>
-    
-    <div class="flex-conteiner"> <!--   ОСНОВНОЙ КОНТЕЙНЕР -->
-
+    <ul class="btn-container"> <!-- lang choice btn start -->
+      <li>
+        <a href="index.html" class="btn btn-primary">Русский</a>
+      </li>
+      <li>
+        <a href="en_.html" class="btn btn-secondary">English</a>
+      </li>
+    </ul><!-- lang choice btn end -->
+    <div class="flex-container"> <!--   main container-->
       <div class="flex-item1 flex-border"> <!--БЛОК О С ФОТКОЙ И  ИМЕНЕМ -->
         <div class="fio-wrapper">
           <div class="photo">
