--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </div> 
       </div><!--БЛОК О СЕБЕ -->
 
-       <div class="flex-item2 flex-border"> <!-- БЛОК ОБРАЗОВАНИЕ -->
+       <div class="flex-item1 flex-border"> <!-- БЛОК ОБРАЗОВАНИЕ -->
         <div class="education-wrapper">
           <div class="title-large">Образование</div>
           <div class="education-item">
@@ -103,19 +103,17 @@
             <div>2017</div>
             <div>
               <ul>
-                <li>Онлайн интенсив, Хороший программист</li>
+                <li>Онлайн интенсив, Ruby on Rails, Хороший программист</li>
                 <li><a href="https://goodprogrammer.ru">goodprogrammer.ru</a></li>
               </ul>
             </div>
           </div>
         </div>
-      </div> <!-- БЛОК ОБРАЗОВАНИЕ -->
+      </div> <!-- КОНЕЦ БЛОК ОБРАЗОВАНИЕ -->
 
-      <div class="flex-item1 flex-border">  <!-- БЛОК НАВЫКИ -->
+      <div class="flex-item2 flex-border">  <!-- БЛОК НАВЫКИ -->
         <div class="skills-wrapper">
-          <div class="title-large">
-            Навыки
-          </div>
+          <div class="title-large"> Навыки </div>
           <div class="skills-item-wrapper">
             <div class="skills-item" >Ruby</div>
             <div class="skills-item" >Ruby on Rails</div>
@@ -129,9 +127,7 @@
             <div class="skills-item" >Ubuntu</div>
           </div>
           <div class="languages-wrapper">
-            <div class="title-small">
-              Языки
-            </div>
+            <div class="title-small"> Языки </div>
             <ul>
               <li>Русский - родной</li>
               <li>English - чтение тех. документации</li>
