--- a/en_.html
+++ b/en_.html
@@ -54,7 +54,7 @@
             <ul>
               <li>e-mail: <a href="mailto:alexbub72@dmail.com">alexbub72@gmail.com</a> </li>
               <li>phone:<a href="tel:+79323268892">+79323268892</a></li>
-              <li>Ссылка: <a href="https://avbabushkin.github.io/surguttehnika/">github/surguttehnika</a></li>
+              <li>Ссылка: <a href="https://t.me/avbabushkin/">@avbabushkin</a></li>
             </ul>
           </div>
         </div> 
