change my projects block

--- a/en_.html
+++ b/en_.html
@@ -88,9 +88,10 @@
       </div><!-- skills block end -->
        <div class="item-test flex-border project-wrapper"> <!-- badprojects begin -->
         <h2 class="title-large">Projects</h2>  
-        <ul>
-          <li class="title-project">Site "SurgutTekhika"</li>
-          <li>link: <a href="https://avbabushkin.github.io/surguttehnika/">github/surguttehnika</a></li>
+          <ul>
+          <li class="title-project">Site for "STEH" company</li>
+          <li>link: <a href="https://avbabushkin.github.io/steh/">STEH</a></li>
+          <li>My current project.</li>
         </ul>
         <ul>
           <li class="title-project">Site for service "dmkservice" - repair toner cartrige</li>
