--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
             <div class="skills-item" >PostgreSQL</div>
             <div class="skills-item" >Redis</div>
             <div class="skills-item" >HTML</div>
+            <div class="skills-item" >SLIM</div>
             <div class="skills-item" >CSS</div>
+            <div class="skills-item" >SASS</div>
             <div class="skills-item" >Верстка (Grid, FlexBox)</div>
             <div class="skills-item" >Git</div>
             <div class="skills-item" >Ubuntu</div>
@@ -89,21 +91,18 @@
        <div class="item-test flex-border project-wrapper"> <!-- badprojects begin -->
         <h2 class="title-large">Проекты</h2>  
         <ul>
-          <li class="title-project">Сайт для компании "СургутТехника"</li>
-          <li>Ссылка: <a href="https://avbabushkin.github.io/surguttehnika/">github/surguttehnika</a></li>
-          <li>Реализованые задачи:</li>
-          <ol>
-            <li>- сайт информационного характера, задачей которого является ознакомление клиентов с основными услугами компании;</li>
-          </ol>
+          <li class="title-project">Сайт для компании "STEH"</li>
+          <li>Ссылка: <a href="https://avbabushkin.github.io/steh/">STEH</a></li>
+          <li>Текущий проект, над которым работаю.</li>
         </ul>
         <ul>
           <li class="title-project">Сайт для компании "dmkservice"</li>
           <li>Ссылка: <a href="">dmkservice.ru</a> (R.I.P.)</li>
           <li>Реализованые задачи:</li>
-          <ol>
+          <ul>
             <li>- написан сайт для сервиса заправки картриджей;</li>
             <li>- продвижение в ТОП выдачи Яндекс/Google по запросу "заправка картриджей в Демьянке".</li>
-          </ol>
+          </ul>
         </ul>
       </div><!-- bagprojects bloock-->
     </div>
@@ -174,20 +173,30 @@
     <div class="wrapper-test"><!-- next wrapper -->
       <div class="item-test flex-border work-exp-wrapper" ><!-- job experience block begin -->
         <h2 class="title-large">Дополнительно</h2>
-        <h3>Еще немного о себе:</h3>
-        <ul>
-          <li>Не курю, но вам ничего советовать не стану</li>
-          <li>Отношение к алкоголю: нейтральное</li>
-          <li>Увлекаюсь баскетболом играл в любительской команде, есть опыт участия в соревнованиях</li>
-        </ul>
-        
-        <h3>Книги:</h3>
-        <ul>
-          <li>Хел Фултон - Программирование на языке Ruby</li>
-          <li>Ruby on Rails Tutorial - by Michael Hartl</li>
-          <li>Стив Макконнелл - Совершенный код</li>
-          <li>Гради Буч - Обьектно ориентированный анализ и проектирование</li>
-        </ul>
+        <div>
+          <h3>Еще немного о себе:</h3>
+          <ul>
+            <li>Не курю, но вам ничего советовать не стану</li>
+            <li>Отношение к алкоголю: нейтральное</li>
+            <li>Увлекаюсь баскетболом играл в любительской команде, есть опыт участия в соревнованиях</li>
+          </ul>
+          
+          <h3>Книги:</h3>
+          <ul>
+            <li>Хел Фултон - Программирование на языке Ruby</li>
+            <li>Ruby on Rails Tutorial - by Michael Hartl</li>
+            <li>Стив Макконнелл - Совершенный код</li>
+            <li>Гради Буч - Обьектно ориентированный анализ и проектирование</li>
+          </ul>          
+        </div>
+        <div>
+          <h3>Технологии в процессе изучения:</h3>
+          <ul>
+            <li>JavaScript - знать два скриптовых языка лучше чем один :)</li>
+            <li>React - наверное стоило указать через запятую в пункте выше</li>
+          </ul>   
+        </div>
+
       </div> <!-- education block end-->
     </div>  
   </section>
