fix common info

--- a/en_.html
+++ b/en_.html
@@ -72,8 +72,10 @@
             <div class="skills-item" >PostgreSQL</div>
             <div class="skills-item" >Redis</div>
             <div class="skills-item" >HTML</div>
+            <div class="skills-item" >SLIM</div>
             <div class="skills-item" >CSS</div>
-            <div class="skills-item" >Верстка (Grid, FlexBox)</div>
+            <div class="skills-item" >SASS</div>
+            <div class="skills-item" >Grid, FlexBox</div>
             <div class="skills-item" >Git</div>
             <div class="skills-item" >Ubuntu</div>
           </div>
@@ -145,10 +147,32 @@
       </div> <!-- education block end-->
     </div> 
     <div class="wrapper-test"><!-- next wrapper -->
-      <div class="item-test flex-border work-exp-wrapper" ><!-- job experience block begin -->
+      <div class="item-test flex-border work-exp-wrapper" >
         <h2 class="title-large">Common</h2>
-      
-      </div> <!-- education block end-->
+        <div>
+          <h3>A little bit about me yet:</h3>
+          <ul>
+            <li>no smoke</li>
+            <li>relationship to alcohol - neutral</li>
+            <li>Love basketball</li>
+          </ul>
+          
+          <h3>Books:</h3>
+          <ul>
+            <li>Hal Fulton - The Ruby Way</li>
+            <li>Ruby on Rails Tutorial - by Michael Hartl</li>
+            <li>Steven C. McConnell - Code Complete</li>
+            <li>Grady Booch - Object-Oriented Analysis and Design with Applications</li>
+          </ul>          
+        </div>
+        <div>
+          <h3>Learn now:</h3>
+          <ul>
+            <li>JavaScript</li>
+            <li>React</li>
+          </ul>   
+        </div>
+      </div>
     </div> 
   </section>
 </body>
