--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
       </div> <!-- education block end-->
     </div>
     <div class="wrapper-test"><!-- next wrapper -->
-      <div class="item-test flex-border work-exp-wrapper" ><!-- job experience block begin -->
+      <div class="item-test flex-border work-exp-wrapper" >
         <h2 class="title-large">Дополнительно</h2>
         <div>
           <h3>Еще немного о себе:</h3>
@@ -197,7 +197,7 @@
           </ul>   
         </div>
 
-      </div> <!-- education block end-->
+      </div>
     </div>  
   </section>
 </body>
