--- a/en_.html
+++ b/en_.html
@@ -163,6 +163,7 @@
             <li>Ruby on Rails Tutorial - by Michael Hartl</li>
             <li>Steven C. McConnell - Code Complete</li>
             <li>Grady Booch - Object-Oriented Analysis and Design with Applications</li>
+            <li>Alan Beaulieu - Learning SQL</li>
           </ul>          
         </div>
         <div>
