--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
             <li>Ruby on Rails Tutorial - by Michael Hartl</li>
             <li>Стив Макконнелл - Совершенный код</li>
             <li>Гради Буч - Обьектно ориентированный анализ и проектирование</li>
+            <li>Alan Beaulie - Learning SQL</li>
           </ul>          
         </div>
         <div>
