fix project link

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <h2 class="title-large">Проекты</h2>  
         <ul>
           <li class="title-project">Сайт для компании "STEH"</li>
-          <li>Ссылка: <a href="https://avbabushkin.github.io/steh/">STEH</a></li>
+          <li>Ссылка: <a href="https://github.com/avbabushkin/steh">STEH</a></li>
           <li>Текущий проект, над которым работаю.</li>
         </ul>
         <ul>
