--- a/en_.html
+++ b/en_.html
@@ -14,14 +14,14 @@
       <li><a href="en_.html" class="btn btn-primary">English</a></li>
     </ul><!-- lang btn end -->    
     <div class="wrapper-test"><!-- start wrapper -->
-      <div class="item-test flex-border"> <!-- foto name social block begin-->
+      <div class="item-test-first flex-border"> <!-- foto name social block begin-->
         <div class="fio-wrapper">
           <div class="photo">
-            <img src="img/photo.jpeg" alt="">
+            <img src="img/photo.jpeg" alt="" class="photo">
           </div>
           <div class="wrapper-name">
             <ul>
-              <li><h1 class="title-large">Aleksandr Babushkin</h1></li>
+              <li><h1 class="title-large-first">Aleksandr Babushkin</h1></li>
               <li><h2 class="title-small">Ruby/RoR-developer</h2></li>
             </ul>
             <div class="social-links-wrapper">
@@ -43,17 +43,17 @@
       <div class="item-test flex-border"> <!-- about me block begin -->
         <div class="about-wrapper">
           <div>
-            <h2 class="title-small">About me</h2>
+            <h1 class="title-large">About me</h1>
             <ul>
               <li>age: 28</li>
               <li>city: Moscow</li>
             </ul>
           </div>
           <div class="">
-            <div class="title-small">Contacts:</div>
+            <h2 class="title-small">Contacts:</h2>
             <ul>
               <li>e-mail: <a href="mailto:alexbub72@dmail.com">alexbub72@gmail.com</a> </li>
-              <li>phone:<a href="tel:+79323268892">+79323268892</a></li>
+              <li>phone: <a href="tel:+79323268892">+79323268892</a></li>
               <li>Ссылка: <a href="https://t.me/avbabushkin/">@avbabushkin</a></li>
             </ul>
           </div>
@@ -75,12 +75,13 @@
             <div class="skills-item" >SLIM</div>
             <div class="skills-item" >CSS</div>
             <div class="skills-item" >SASS</div>
-            <div class="skills-item" >Grid, FlexBox</div>
+            <div class="skills-item" >Grid</div>
+            <div class="skills-item" >FlexBox</div>
             <div class="skills-item" >Git</div>
             <div class="skills-item" >Ubuntu</div>
           </div>
           <div class="languages-wrapper">
-            <h2>Languages</h2>
+            <h2 class="title-small">Languages</h2>
             <ul>
               <li>Russian - native</li>
               <li>English -  Intermediate</li>
@@ -89,7 +90,7 @@
         </div>
       </div><!-- skills block end -->
        <div class="item-test flex-border project-wrapper"> <!-- badprojects begin -->
-        <h2 class="title-large">Projects</h2>  
+        <h1 class="title-large">Projects</h1>  
           <ul>
           <li class="title-project">Site for "STEH" company</li>
           <li>link: <a href="https://avbabushkin.github.io/steh/">STEH</a></li>
@@ -120,7 +121,7 @@
       </div><!-- job experience end-->
       <div class="item-test flex-border"><!-- education block begin -->
         <div class="education-wrapper">
-          <h2 class="title-large">Education</h2>
+          <h1 class="title-large">Education</h1>
           <div class="education-item">
             <div>2014</div>
             <div>
@@ -133,7 +134,7 @@
               </ul>
             </div>
           </div>
-          <div class="title-small">additional education</div>
+          <h2 class="title-small">additional education</h2>
           <div class="education-item">
             <div>2017</div>
             <div>
@@ -148,16 +149,16 @@
     </div> 
     <div class="wrapper-test"><!-- next wrapper -->
       <div class="item-test flex-border work-exp-wrapper" >
-        <h2 class="title-large">Common</h2>
+        <h1 class="title-large">Common</h1>
         <div>
-          <h3>A little bit about me yet:</h3>
+          <h2 class="title-small">A little bit about me yet:</h2>
           <ul>
             <li>no smoke</li>
             <li>relationship to alcohol - neutral</li>
             <li>Love basketball</li>
           </ul>
           
-          <h3>Books:</h3>
+          <h2 class="title-small">Books:</h2>
           <ul>
             <li>Hal Fulton - The Ruby Way</li>
             <li>Ruby on Rails Tutorial - by Michael Hartl</li>
@@ -167,7 +168,7 @@
           </ul>          
         </div>
         <div>
-          <h3>Learn now:</h3>
+          <h2 class="title-small">Learn now:</h2>
           <ul>
             <li>JavaScript</li>
             <li>React</li>
