--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
         <div>
           <h2>Технологии в процессе изучения:</h2>
           <ul>
-            <li>JavaScript - наверстваю упущеное :)</li>
+            <li>JavaScript - навёрстываю упущеное :)</li>
             <li>React - брат сказал учи реакт бл...!</li>
           </ul>   
         </div>
