--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <h2>О себе</h2>
             <ul>
               <li>возраст: 28</li>
-              <li>город: Москва, Железнодородный</li>
+              <li>город: Москва, Железнодорожный</li>
             </ul>
             <h3>Контакты:</h3>
             <ul>
