--- a/index.html
+++ b/index.html
@@ -208,8 +208,8 @@
         <div>
           <h2>Технологии в процессе изучения:</h2>
           <ul>
-            <li>JavaScript - навёрстываю упущеное :)</li>
-            <li>React - брат сказал учи реакт бл...!</li>
+            <li>JavaScript</li>
+            <li>React</li>
           </ul>   
         </div>
 
