change top title

--- a/en_.html
+++ b/en_.html
@@ -22,7 +22,7 @@
           <div class="wrapper-name">
             <ul>
               <li><h1 class="title-large-first">Aleksandr Babushkin</h1></li>
-              <li><h2 class="title-small">Ruby/RoR-developer</h2></li>
+              <li><h2 class="title-small">Web-developer</h2></li>
             </ul>
             <div class="social-links-wrapper">
               <a href="https://www.facebook.com/babushkin72">  
