--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
       <li><a href="index.html" class="btn btn-primary">Русский</a></li>
       <li><a href="en_.html" class="btn btn-secondary">English</a></li>
     </ul><!-- lang btn end -->    
+    <div>
+      <a href="#" class="like-counter">Like</a><span class="click-text"><a id="clicks"></span>
+    </div>
     <div class="wrapper-test"><!-- start wrapper -->
       <div class="item-test-first flex-border"> <!-- foto name social block begin-->
         <div class="fio-wrapper">
@@ -21,7 +24,7 @@
           <div class="wrapper-name">
             <ul>
               <li><h1>Александр Бабушкин</h1></li>
-              <li><h2>Ruby/RoR - developer</h2></li>
+              <li><h2>Web - разработчик</h2></li>
             </ul>
             <div class="social-links-wrapper">
               <a href="https://www.facebook.com/babushkin72">  
