--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <!-- custom css -->
   <link rel="stylesheet" href="css/style.css">
 
-  <title>Александр Бабушкин - CV</title>
+  <title>Alexandr Babushkin - CV</title>
 </head>
 <body>
   <section>    
@@ -14,9 +14,6 @@
       <li><a href="index.html" class="btn btn-primary">Русский</a></li>
       <li><a href="en_.html" class="btn btn-secondary">English</a></li>
     </ul><!-- lang btn end -->    
-    <div>
-      <a href="#" class="like-counter">Like</a><span class="click-text"><a id="clicks"></span>
-    </div>
     <div class="wrapper-test"><!-- start wrapper -->
       <div class="item-test-first flex-border"> <!-- foto name social block begin-->
         <div class="fio-wrapper">
