--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
               <li>e-mail: <a href="mailto:alexbub72@dmail.com">alexbub72@gmail.com</a> </li>
               <li>телефон: <a href="tel:+79323268892">+79323268892</a></li>
               <li>telegram: <a href="https://t.me/avbabushkin">@avbabushkin</a></li>
+              <li>skype:>live:av_babushkin</a></li>
             </ul>
           </div>
         </div> 
