Style and link fixes

--- a/en_.html
+++ b/en_.html
@@ -13,7 +13,7 @@
       <li><a href="index.html" class="btn btn-secondary">Русский</a></li>
       <li><a href="en_.html" class="btn btn-primary">English</a></li>
     </ul><!-- lang btn end -->    
-    <div class="wrapper-test"><!-- start wrapper -->
+    <div class="wrapper-row-section"><!-- start wrapper -->
       <div class="item-test-first flex-border"> <!-- foto name social block begin-->
         <div class="fio-wrapper">
           <div class="photo">
@@ -60,7 +60,7 @@
         </div> 
       </div><!-- About me block end -->
     </div>
-    <div class="wrapper-test"><!-- next wrapper -->
+    <div class="wrapper-row-section"><!-- next wrapper -->
 
       <div class="item-test flex-border"><!-- skills block begin -->
         <div class="skills-wrapper">
@@ -102,7 +102,7 @@
         </ul>
       </div><!-- bagprojects bloock-->
     </div>
-    <div class="wrapper-test"><!-- next wrapper -->
+    <div class="wrapper-row-section"><!-- next wrapper -->
      
       <div class="item-test flex-border work-exp-wrapper" ><!-- job experience block begin -->
         <h2 class="title-large">Experience</h2>
@@ -147,7 +147,7 @@
         </div>
       </div> <!-- education block end-->
     </div> 
-    <div class="wrapper-test"><!-- next wrapper -->
+    <div class="wrapper-row-section"><!-- next wrapper -->
       <div class="item-test flex-border work-exp-wrapper" >
         <h1 class="title-large">Common</h1>
         <div>
