--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <li><a href="index.html" class="btn btn-primary">Русский</a></li>
       <li><a href="en_.html" class="btn btn-secondary">English</a></li>
     </ul><!-- lang btn end -->    
-    <div class="wrapper-test"><!-- start wrapper -->
+    <div class="wrapper-row-section"><!-- start wrapper -->
       <div class="item-test-first flex-border"> <!-- foto name social block begin-->
         <div class="fio-wrapper">
           <img src="img/photo.jpeg" alt="" class="photo">
@@ -39,25 +39,24 @@
           </div>
         </div>
       </div><!--foto name social block end -->
-      <div class="item-test flex-border"> <!-- about me block begin -->
-        <div class="about-wrapper">
-            <h2>О себе</h2>
-            <ul>
-              <li>возраст: 28</li>
-              <li>город: Москва, Железнодорожный</li>
-            </ul>
-            <h3>Контакты:</h3>
-            <ul>
-              <li>e-mail: <a href="mailto:alexbub72@dmail.com">alexbub72@gmail.com</a> </li>
-              <li>телефон: <a href="tel:+79323268892">+79323268892</a></li>
-              <li>telegram: <a href="https://t.me/avbabushkin">@avbabushkin</a></li>
-              <li>skype: live:av_babushkin</a></li>
-            </ul>
-          </div>
-        </div> 
-      </div><!-- About me block end -->
+      <div class="item-test flex-border"> 
+        <div class="about-wrapper"><!-- about me block begin -->
+          <h2>О себе</h2>
+          <ul>
+            <li>возраст: 28</li>
+            <li>город: Москва, Железнодорожный</li>
+          </ul>
+          <h3>Контакты:</h3>
+          <ul>
+            <li>e-mail: <a href="mailto:alexbub72@dmail.com">alexbub72@gmail.com</a> </li>
+            <li>телефон: <a href="tel:+79323268892">+79323268892</a></li>
+            <li>telegram: <a href="https://t.me/avbabushkin">@avbabushkin</a></li>
+            <li>skype: live:av_babushkin</a></li>
+          </ul>
+        </div><!-- About me block end --> 
+      </div>
     </div>
-    <div class="wrapper-test"><!-- next wrapper -->
+    <div class="wrapper-row-section"><!-- next wrapper -->
 
       <div class="item-test flex-border"><!-- skills block begin -->
         <div class="skills-wrapper">
@@ -100,19 +99,20 @@
        <div class="item-test flex-border project-wrapper"> <!-- badprojects begin -->
         <h2>Проекты</h2>  
         <ul>
-          <li class="title-project">Сайт для компании по аренде спецтехники</li>
-          <li>Первая версия (HTML/CSS): 
-          <a href="https://avbabushkin.github.io/surguttehnika/"> СургутТехника</a></li>
-          <li>Вторая версия, над которой работаю сейчас:
-          <a href="https://github.com/avbabushkin/steh"> СургутТехника - STEH</a></li>
-          <li>Переписываю данный (pet) проект на Rails + React в учебных целях</li>
-          <br>
-          <li style="border-bottom: 1px solid #ccc;"></li>
+          <li><a href="https://noaskme.herokuapp.com">Хорошие вопросы (учебный проект)</a></li>
+          <li>Репозиторий проекта: <a href="https://github.com/avbabushkin/askme">GitHub</a></li>
         </ul>
         <br>
         <ul>
-          <li class="title-project">Сайт для сервиса заправки картриджей</li>
-          <li>Ссылка: <a href="">dmkservice.ru</a> (R.I.P. - сервис прекратил деятельность)</li>
+          <li><a href="https://avbabushkin.github.io/surguttehnika/"> СургутТехника</a></li>
+          <li>Сайт для компании по аренде спецтехники</li>
+          <a href="https://stehsteh.herokuapp.com"> СургутТехника (v2)</a></li>
+          <li>Переписываю данный (pet) проект на Rails + React в учебных целях</li>
+          <li>Репозиторий проекта: <a href="https://github.com/avbabushkin/steh">GitHub</a></li>
+        </ul>
+        <br>
+        <ul>
+          <li><a href="dmkservice.ru">dmkservice.ru</a> (сервис прекратил деятельность)</li>
           <li>Реализованые задачи:</li>
           <ul>
             <li>- сайт для сервиса заправки картриджей (HTML/CSS/PHP);</li>
@@ -121,7 +121,7 @@
         </ul>
       </div><!-- bagprojects bloock-->
     </div>
-    <div class="wrapper-test"><!-- next wrapper -->
+    <div class="wrapper-row-section"><!-- next wrapper -->
      
       <div class="item-test flex-border work-exp-wrapper" ><!-- job experience block begin -->
         <h2>Опыт работы</h2>
@@ -182,7 +182,7 @@
         </div>
       </div> <!-- education block end-->
     </div>
-    <div class="wrapper-test"><!-- next wrapper -->
+    <div class="wrapper-row-section"><!-- next wrapper -->
       <div class="item-test flex-border work-exp-wrapper" >
         <h1 >Дополнительно</h1>
         <div>
