rewrited bottom text

--- a/index.html
+++ b/index.html
@@ -184,20 +184,20 @@
     </div>
     <div class="wrapper-row-section"><!-- next wrapper -->
       <div class="item-test flex-border work-exp-wrapper" >
-        <h1 >Дополнительно</h1>
+        <h2>Дополнительно</h2>
         <div>
-          <h2>Еще немного о себе:</h2>
+          <h3><strong>Еще немного о себе:</strong></h3>
           <p>
-            Люблю все, что (прямо или косвенно) связяно с технологиями от пайки SMD до Brainfuck programming.
+            Взращиваю в себе полноценного фулстака.  
           </p>
           <p>
-            Увлекаюсь баскетболом играл в любительской команде, есть опыт участия в соревнованиях.
+            Увлекаюсь баскетболом.
           </p>
           <p>
             Отношение к алкоголю/курению: нейтральное.
           </p>
           
-          <h2>Книги:</h2>
+          <h3><strong>Книги:</strong></h3>
           <ul>
             <li><strong>Хел Фултон</strong> - Программирование на языке Ruby (complete 50%)</li>
             <li><strong>Michael Hartl</strong> - Ruby on Rails Tutorial  (complete 60%)</li>
@@ -207,7 +207,7 @@
           </ul>          
         </div>
         <div>
-          <h2>Технологии в процессе изучения:</h2>
+          <h3><strong>Технологии в процессе изучения:</strong></h3>
           <ul>
             <li>JavaScript</li>
             <li>React</li>
