--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <!-- custom css -->
   <link rel="stylesheet" href="css/style.css">
-  <title>Александр Бабушкин - CV</title>
+  <title>Aleksandr B. - CV</title>
 </head>
 <body>
   <section>    
@@ -17,12 +17,12 @@
       <div class="item-test-first flex-border"> <!-- foto name social block begin-->
         <div class="fio-wrapper">
           <div class="photo">
-            <img src="img/photo.jpeg" alt="" class="photo">
+            <img src="img/photo2.jpeg" alt="" class="photo">
           </div>
           <div class="wrapper-name">
             <ul>
-              <li><h1 class="title-large-first">Aleksandr Babushkin</h1></li>
-              <li><h2 class="title-small">Web-developer</h2></li>
+              <li><h1 class="title-large-first">Aleksandr</h1></li>
+              <li><h2 class="title-small">Ruby developer</h2></li>
             </ul>
             <div class="social-links-wrapper">
               <a href="https://www.facebook.com/babushkin72">  
