--- a/ru.html
+++ b/ru.html
@@ -14,51 +14,48 @@
       <li><a href="index.html" class="btn btn-primary">English</a></li>
       <li><a href="ru.html" class="btn btn-secondary">Русский</a></li>
     </ul><!-- lang btn end -->    
-    <div class="wrapper-row-section"><!-- start wrapper -->
-      <div class="item-test-first flex-border"> <!-- foto name social block begin-->
-        <div class="fio-wrapper">
-          <img src="img/photo.jpeg" alt="" class="photo">
-          <div class="wrapper-name">
-            <ul>
-              <li><h1>Александр Бабушкин</h1></li>
-              <li><h2>Web - разработчик</h2></li>
-            </ul>
-            <div class="social-links-wrapper">
-              <a href="https://www.facebook.com/babushkin72">  
-                <div class="social-item">f</div>
-              </a>
-              <a href="https://linkedin.com/in/avbabushkin">
-                <div class="social-item">in</div>            
-              </a>
-              <a href="https://github.com/avbabushkin">
-                <div class="social-item">
-                  <img src="img/GitHub-Mark-Light-64px.png"  alt="">
-                </div>
-              </a>
-            </div>  
-          </div>
+    <div class="item-container"> <!-- foto name social block begin-->
+      <div class="base-info">
+        <img src="img/photo.jpeg" alt="" class="photo">
+        <div class="wrapper-name">
+          <ul>
+            <li><h1>Александр Бабушкин</h1></li>
+            <li><h2>Web - разработчик</h2></li>
+          </ul>
+          <div class="social-links-wrapper">
+            <a href="https://www.facebook.com/babushkin72">  
+              <div class="social-item">f</div>
+            </a>
+            <a href="https://linkedin.com/in/avbabushkin">
+              <div class="social-item">in</div>            
+            </a>
+            <a href="https://github.com/avbabushkin">
+              <div class="social-item">
+                <img src="img/GitHub-Mark-Light-64px.png"  alt="">
+              </div>
+            </a>
+          </div>  
         </div>
-      </div><!--foto name social block end -->
-      <div class="item-test flex-border"> 
-        <div class="about-wrapper"><!-- about me block begin -->
-          <h2>О себе</h2>
-          <ul>
-            <li>возраст: 28</li>
-            <li>город: Москва, Железнодорожный</li>
-          </ul>
-          <h3>Контакты:</h3>
-          <ul>
-            <li>e-mail: <a href="mailto:alexbub72@dmail.com">alexbub72@gmail.com</a> </li>
-            <li>телефон: <a href="tel:+79323268892">+79323268892</a></li>
-            <li>telegram: <a href="https://t.me/avbabushkin">@avbabushkin</a></li>
-            <li>skype: live:av_babushkin</a></li>
-          </ul>
-        </div><!-- About me block end --> 
       </div>
-    </div>
-    <div class="wrapper-row-section"><!-- next wrapper -->
+    </div><!--foto name social block end -->
+    <div class="item-container"> 
+      <div class="about-wrapper"><!-- about me block begin -->
+        <h2>О себе</h2>
+        <ul>
+          <li>возраст: 28</li>
+          <li>город: Москва, Железнодорожный</li>
+        </ul>
+        <h3>Контакты:</h3>
+        <ul>
+          <li>e-mail: <a href="mailto:alexbub72@dmail.com">alexbub72@gmail.com</a> </li>
+          <li>телефон: <a href="tel:+79323268892">+79323268892</a></li>
+          <li>telegram: <a href="https://t.me/avbabushkin">@avbabushkin</a></li>
+          <li>skype: live:av_babushkin</a></li>
+        </ul>
+      </div><!-- About me block end --> 
+    <
 
-      <div class="item-test flex-border"><!-- skills block begin -->
+      <div class="item-container"><!-- skills block begin -->
         <div class="skills-wrapper">
           <h2>Навыки</h2>
           <div class="skills-item-wrapper">
@@ -96,7 +93,7 @@
           </div>
         </div>
       </div><!-- skills block end -->
-       <div class="item-test flex-border project-wrapper"> <!-- badprojects begin -->
+       <div class="item-container project-wrapper"> <!-- badprojects begin -->
         <h2>Проекты</h2>  
         <ul>
           <li><a href="https://noaskme.herokuapp.com">Хорошие вопросы (учебный проект)</a></li>
@@ -119,11 +116,8 @@
             <li>- продвижение в ТОП выдачи Яндекс/Google по запросу "заправка картриджей в Демьянке".</li>
           </ul>
         </ul>
-      </div><!-- bagprojects bloock-->
-    </div>
-    <div class="wrapper-row-section"><!-- next wrapper -->
-     
-      <div class="item-test flex-border work-exp-wrapper" ><!-- job experience block begin -->
+      </div><!-- badprojects bloock--> 
+      <div class="item-container work-exp-wrapper" ><!-- job experience block begin -->
         <h2>Опыт работы</h2>
         <ul>
           <li>ОАО "РЖД" (2013 - 2018)</li>
@@ -155,7 +149,8 @@
           </ul>
         </ul>            
       </div><!-- job experience end-->
-      <div class="item-test flex-border"><!-- education block begin -->
+
+      <div class="item-container"><!-- education block begin -->
         <div class="education-wrapper">
           <h2>Образование</h2>
           <div class="education-item">
@@ -181,9 +176,7 @@
           </div>
         </div>
       </div> <!-- education block end-->
-    </div>
-    <div class="wrapper-row-section"><!-- next wrapper -->
-      <div class="item-test flex-border work-exp-wrapper" >
+      <div class="item-container wxp-wrapper" >
         <h2>Дополнительно</h2>
         <div>
           <h3><strong>Еще немного о себе:</strong></h3>
@@ -215,7 +208,6 @@
         </div>
 
       </div>
-    </div>  
   </section>
 </body>
 </html>
