css and template refactor

--- a/ru.html
+++ b/ru.html
@@ -6,7 +6,7 @@
   <!-- custom css -->
   <link rel="stylesheet" href="css/style.css">
 
-  <title>Alexandr Babushkin - CV</title>
+  <title>Александр Б.</title>
 </head>
 <body>
   <section>    
@@ -52,8 +52,7 @@
           <li>telegram: <a href="https://t.me/avbabushkin">@avbabushkin</a></li>
           <li>skype: live:av_babushkin</a></li>
         </ul>
-      </div><!-- About me block end --> 
-    <
+      </div><!-- About me block end -->
 
       <div class="item-container"><!-- skills block begin -->
         <div class="skills-wrapper">
