--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
   <div class="container"> <!-- MAIN CONTAINER -->
-    <div class="btn-wrapper">
-      <div class="btn">
+    <div class="lang-btn-wrapper">
+      <div class="lang-btn">
         <a href="index.html">English</a></li>
       </div>
-      <div class="btn">
+      <div class="lang-btn">
         <a href="ru.html">Русский</a></li>
       </div>
     </div>
@@ -21,9 +21,9 @@
     <div class="item-container sp-between"> <!-- foto name social block begin-->
       <div class="first-col">
         <ul>
-          <li><h2>Alexandr</h2></li>
+          <li><h1>Alexandr</h1></li>
           <li>Ruby developer</li>
-          <li>29</li>
+          <li>29 years old</li>
           <li>1+ year experience</li>
         </ul>
         <!-- <div class="social-links-wrapper">
@@ -150,13 +150,11 @@
     <div class="item-container">
       <div class="">
         <p>
-          <h2>Common</h2>          
+          <h2>Other</h2>          
         </p>
         <div>
           A little bit about me yet:
-          <ul>
-            <li>Love basketball</li>
-          </ul>            
+          
           Books
           <ul>
             <li>Hal Fulton - The Ruby Way</li>
@@ -176,5 +174,10 @@
       </div>
     </div>
   </div><!-- END MAIN CONTAINER  -->
+  <footer>
+    <div class="container">
+      asd
+    </div>
+  </footer>
 </body>
 </html>
