spell checking finish

--- a/ru.html
+++ b/ru.html
@@ -23,7 +23,7 @@
         <ul>
           <li><h1>Александр</h1></li>
           <li>Ruby on Rails разрботчик</li>
-          <li>29 ле</li>
+          <li>29 лет</li>
           <li>1+ лет опыта </li>
         </ul>
         <!-- <div class="social-links-wrapper">
